# oPPTimiz

./: COMPARATIF.md  README.md
Src/Menu Contextuel/: oPPTimiz.ps1  oPPTimiz_menu_contextuel.reg
engine-dotnet/: README.md
engine-dotnet/oPPTimiz.Cli/: Program.cs  oPPTimiz.Cli.csproj
engine-dotnet/oPPTimiz.Core/: ImageRecompressor.cs  OptimizationLevel.cs  OptimizationResult.cs  Optimizer.cs  oPPTimiz.Core.csproj
engine-dotnet/oPPTimiz.Tests/: OptimizerTests.cs  oPPTimiz.Tests.csproj
engine-python/: README.md  pyproject.toml
engine-python/opptimiz/: __init__.py  cli.py  images.py  optimizer.py
engine-python/tests/: test_optimizer.py
