[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "opptimiz"
version = "1.0.0"
description = "Cross-platform optimizer for Office documents (.pptx/.docx/.xlsx)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = ["Pillow>=10"]

[project.optional-dependencies]
test = ["pytest>=7", "python-pptx>=0.6", "python-docx>=1.0", "openpyxl>=3.1"]

[project.scripts]
opptimiz = "opptimiz.cli:main"

[tool.setuptools]
packages = ["opptimiz"]
